Move legend to right for yearly gen

--- a/app/views/communities/sections/electricity/generation/_yearly_chart.html.haml
+++ b/app/views/communities/sections/electricity/generation/_yearly_chart.html.haml
@@ -2,7 +2,7 @@
 = area_chart generation_yearly_community_charts_path(@community),
   stacked: true,
   title: base_title,
-  legend: 'left',
+  legend: 'right',
   height: '500px',
   suffix: " MWh",
   xtitle: "Year",
