--- a/app/views/communities/tabs/fuel/_bulk_fuel_facilities.html.haml
+++ b/app/views/communities/tabs/fuel/_bulk_fuel_facilities.html.haml
@@ -8,8 +8,8 @@
   %hr.flex-grow-1.mt-1.mb-0
 
 .mb-3
-  = render "communities/sections/#{parent_tab}/bulk_fuel_facilities/map_controls"
-  = render "communities/sections/#{parent_tab}/bulk_fuel_facilities/fuel_delivery"
+  = render "communities/tabs/#{parent_tab}/bulk_fuel_facilities/map_controls"
+  = render "communities/tabs/#{parent_tab}/bulk_fuel_facilities/fuel_delivery"
 
   / Tabs
   .d-flex.align-items-center.mt-4
@@ -29,7 +29,7 @@
   .tab-content.mt-3
     - if show_chart
       #bulk-fuel-capacity-chart-wrapper.tab-pane.fade{ class: ("show active" if active_tab == :chart) }
-        = render "communities/sections/#{parent_tab}/bulk_fuel_facilities/fuel_capacity_chart"
+        = render "communities/tabs/#{parent_tab}/bulk_fuel_facilities/fuel_capacity_chart"
 
     #bulk-fuel-data-wrapper.tab-pane.fade{ class: ("show active" if active_tab == :data) }
-      = render "communities/sections/#{parent_tab}/bulk_fuel_facilities/bulk_fuel_data"
+      = render "communities/tabs/#{parent_tab}/bulk_fuel_facilities/bulk_fuel_data"
