--- a/app/views/communities/tabs/fuel/_fuel_prices.html.haml
+++ b/app/views/communities/tabs/fuel/_fuel_prices.html.haml
@@ -19,6 +19,6 @@
 
 .tab-content
   #fuel-prices-chart.tab-pane.fade.show.active
-    = render "communities/sections/#{parent_tab}/fuel_prices/chart"
+    = render "communities/tabs/#{parent_tab}/fuel_prices/chart"
   #fuel-prices-data.tab-pane.fade
-    = render "communities/sections/#{parent_tab}/fuel_prices/datatable"
+    = render "communities/tabs/#{parent_tab}/fuel_prices/datatable"
