--- a/app/views/communities/tabs/_demographics.html.haml
+++ b/app/views/communities/tabs/_demographics.html.haml
@@ -2,5 +2,5 @@
 
 - if @community.show_population?
   .my-5.mx-3.mx-md-5.mt-3
-    = render "communities/sections/#{tab}/population"
+    = render "communities/tabs/#{tab}/population"
 
