--- a/app/views/communities/tabs/_power_generation.html.haml
+++ b/app/views/communities/tabs/_power_generation.html.haml
@@ -1,10 +1,10 @@
 - tab = 'power_generation'
 - if @community.show_utilities?
   .my-5.mx-3.mx-md-5.mt-3
-    = render "communities/sections/#{tab}/utilities"
+    = render "communities/tabs/#{tab}/utilities"
 - if @community.show_generation?
   .my-5.mx-3.mx-md-5
-    = render "communities/sections/#{tab}/generation"
+    = render "communities/tabs/#{tab}/generation"
 - if @community.show_capacity?
   .my-5.mx-3.mx-md-5
-    = render "communities/sections/#{tab}/capacity"
+    = render "communities/tabs/#{tab}/capacity"
