--- a/app/views/communities/tabs/electric_rates_sales/_rates.html.haml
+++ b/app/views/communities/tabs/electric_rates_sales/_rates.html.haml
@@ -1,6 +1,7 @@
+- parent_tab = "electric_rates_sales"
 .d-flex.align-items-center.mb-3
   %i.bi.bi-coin.me-2.fs-4
-  %h4#electric-rates.mb-0.me-3.py-3.anchor-offset Electric Rates
+  %h4#electric-rates.mb-0.me-3.py-3.anchor-offset Rates
   %hr.flex-grow-1.mt-1.mb-0
             
 .mb-3
@@ -18,6 +19,6 @@
 
 .tab-content
   #electric-rates-chart.tab-pane.fade.show.active
-    = render "communities/sections/electricity/electric_rates/historical_rate_chart"
+    = render "communities/tabs/#{parent_tab}/rates/historical_rate_chart"
   #electric-rates-data.tab-pane.fade
-    = render "communities/sections/electricity/electric_rates/data"
+    = render "communities/tabs/#{parent_tab}/rates/data"
