--- a/app/views/communities/tabs/income/_income.html.haml
+++ b/app/views/communities/tabs/income/_income.html.haml
@@ -1,3 +1,4 @@
+- parent_tab = "income"
 .d-flex.align-items-center.mb-3
   %i.bi.bi-cash-coin.me-2.fs-4
   %h4#income.mb-0.me-3.py-3.anchor-offset Income
@@ -33,17 +34,17 @@
 .tab-content.mt-3
   .tab-pane.fade.active.show#income-poverty-charts{ role: "tabpanel" }
     - if @community.household_incomes.show_income_distribution_chart?
-      = render 'communities/sections/background/income/household_income_distribution_chart'
+      = render "communities/tabs/#{parent_tab}/household_income_distribution_chart"
       
     - if @community.household_incomes.show_median_income_chart? || @community.income_poverties.show_per_capita_income_chart? 
-      = render 'communities/sections/background/income/income_chart'
+      = render "communities/tabs/#{parent_tab}/income_chart"
       
     - if @community.income_poverties.show_poverty_chart?
-      = render 'communities/sections/background/income/poverty_rate_chart'
+      = render "communities/tabs/#{parent_tab}/poverty_rate_chart"
     
   - if @community.show_household_income?  
     .tab-pane.fade#household-income-data{ role: "tabpanel" }
-      = render "communities/sections/income/household_income_data"
+      = render "communities/tabs/#{parent_tab}/household_income_data"
   - if @community.show_income_poverty?
     .tab-pane.fade#income-poverty-data{ role: "tabpanel" }
-      = render "communities/sections/income/income_poverty_data"
+      = render "communities/tabs/#{parent_tab}/income_poverty_data"
