--- a/app/views/communities/tabs/power_generation/_capacity.html.haml
+++ b/app/views/communities/tabs/power_generation/_capacity.html.haml
@@ -3,7 +3,7 @@
   %i.bi.bi-lightning-fill.me-2.fs-4
   %h4#capacity.mb-0.me-2.py-3.anchor-offset Capacity
   %hr.flex-grow-1.mt-1.mb-0.mx-2
-  = render "communities/sections/#{parent_tab}/capacity/about_modal"
+  = render "communities/tabs/#{parent_tab}/capacity/about_modal"
 
 .mb-3
   / Tabs
@@ -21,6 +21,6 @@
   / Tab Content
   .tab-content.mt-3
     #capacity-chart.tab-pane.fade.show.active
-      = render "communities/sections/#{parent_tab}/capacity/capacity_chart"
+      = render "communities/tabs/#{parent_tab}/capacity/capacity_chart"
     #capacity-data.tab-pane.fade
-      = render "communities/sections/#{parent_tab}/capacity/capacity_data"
+      = render "communities/tabs/#{parent_tab}/capacity/capacity_data"
