--- a/app/views/communities/tabs/electric_rates_sales/_rates.html.haml
+++ b/app/views/communities/tabs/electric_rates_sales/_rates.html.haml
@@ -1,7 +1,7 @@
 - parent_tab = "electric_rates_sales"
 .d-flex.align-items-center.mb-3
   %i.bi.bi-coin.me-2.fs-4
-  %h4#electric-rates.mb-0.me-3.py-3.anchor-offset Rates
+  %h4.mb-0.me-3.py-3.anchor-offset Rates
   %hr.flex-grow-1.mt-1.mb-0
             
 .mb-3
