--- a/app/views/communities/tabs/fuel/_bulk_fuel_facilities.html.haml
+++ b/app/views/communities/tabs/fuel/_bulk_fuel_facilities.html.haml
@@ -4,7 +4,7 @@
 
 .d-flex.align-items-center.mb-3
   %i.bi.bi-fuel-pump.me-2.fs-4
-  %h4#bulk-fuel-facilities.mb-0.me-3.py-3 Bulk Fuel Facilities
+  %h4.mb-0.me-3.py-3 Bulk Fuel Facilities
   %hr.flex-grow-1.mt-1.mb-0
 
 .mb-3
