--- a/app/views/communities/tabs/fuel/_fuel_prices.html.haml
+++ b/app/views/communities/tabs/fuel/_fuel_prices.html.haml
@@ -1,8 +1,8 @@
 - parent_tab = "fuel"
 
 .d-flex.align-items-center.mb-3
-  %i.bi.bi-fuel-pump-fill.me-2.fs-4
-  %h4#fuel-prices.mb-0.me-3.py-3.anchor-offset Fuel Prices
+  %i.bi.bi-coin.me-2.fs-4
+  %h4.mb-0.me-3.py-3.anchor-offset Fuel Prices
   %hr.flex-grow-1.mt-1.mb-0
 
 .mb-3
