--- a/app/views/communities/tabs/power_generation/_generation.html.haml
+++ b/app/views/communities/tabs/power_generation/_generation.html.haml
@@ -5,7 +5,7 @@
 
 .d-flex.align-items-center.mb-3
   %i.bi.bi-building-gear.me-2.fs-4
-  %h4#generation.mb-0.me-2.py-3.anchor-offset Generation
+  %h4.mb-0.me-2.py-3.anchor-offset Generation
   %hr.flex-grow-1.mt-1.mb-0.mx-2
   = render "communities/tabs/#{parent_tab}/generation/about_modal"
 
