--- a/app/assets/stylesheets/styles/_communities.scss
+++ b/app/assets/stylesheets/styles/_communities.scss
@@ -1,4 +1,11 @@
 // This file contains styles for community pages
+html {
+  scroll-behavior: smooth;
+}
+
+.scroll-section {
+  scroll-margin-top: 130px;
+}
 
 .collapse-btn {
   font-size: 1.2rem;
