--- a/app/views/communities/tabs/electric_rates_sales/_sales.html.haml
+++ b/app/views/communities/tabs/electric_rates_sales/_sales.html.haml
@@ -1,7 +1,7 @@
 - parent_tab = 'electric_rates_sales'
 .d-flex.align-items-center.mb-3
   %i.bi.bi-cash-coin.me-2.fs-4
-  %h4#sales.mb-0.me-3.py-3.anchor-offset Sales
+  %h4.mb-0.me-3.py-3.anchor-offset Sales
   %hr.flex-grow-1.mt-1.mb-0
 
 = render "communities/tabs/#{parent_tab}/sales/summary"
