--- a/app/views/communities/tabs/power_generation/_capacity.html.haml
+++ b/app/views/communities/tabs/power_generation/_capacity.html.haml
@@ -1,7 +1,7 @@
 - parent_tab = 'power_generation'
 .d-flex.align-items-center.mb-3
   %i.bi.bi-lightning-fill.me-2.fs-4
-  %h4#capacity.mb-0.me-2.py-3.anchor-offset Capacity
+  %h4.mb-0.me-2.py-3.anchor-offset Capacity
   %hr.flex-grow-1.mt-1.mb-0.mx-2
   = render "communities/tabs/#{parent_tab}/capacity/about_modal"
 
