--- a/app/views/communities/tabs/power_generation/_utilities.html.haml
+++ b/app/views/communities/tabs/power_generation/_utilities.html.haml
@@ -2,7 +2,7 @@
 / ── Utilities
 .d-flex.align-items-center.mb-3
   %i.bi.bi-buildings.me-2.fs-4
-  %h4#utilities.mb-0.me-3.py-3.anchor-offset Utilities
+  %h4.mb-0.me-3.py-3.anchor-offset Utilities
   %hr.flex-grow-1.mt-1.mb-0
 
 / Map
