--- a/app/views/communities/tabs/power_generation/_utilities.html.haml
+++ b/app/views/communities/tabs/power_generation/_utilities.html.haml
@@ -48,7 +48,7 @@
           Power Plants
 
 / === Card Body ===
-.bg-body-secondary.p-3.rounded.mb-3
+.p-3.border.rounded.bg-light.mb-3
   .row.g-4.w-100
     .col
       - if @community.show_service_areas?
