--- a/app/views/communities/tabs/electric_rates_sales/_rates.html.haml
+++ b/app/views/communities/tabs/electric_rates_sales/_rates.html.haml
@@ -1,24 +1,13 @@
 - parent_tab = "electric_rates_sales"
+
 .d-flex.align-items-center.mb-3
   %i.bi.bi-coin.me-2.fs-4
   %h4.mb-0.me-3.py-3.anchor-offset Rates
-  %hr.flex-grow-1.mt-1.mb-0
-            
-.mb-3
-  .d-flex.justify-content-between.align-items-center
-    .nav.nav-tabs
-      %li.nav-item
-        = link_to "#electric-rates-chart", class: "nav-link active", data: { bs_toggle: "tab" } do
-          %i.bi.bi-bar-chart-fill.me-1
-          Electric Rates
-      %li.nav-item
-        = link_to "#electric-rates-data", class: "nav-link", data: { bs_toggle: "tab" } do
-          %i.bi.bi-table.me-1
-          Data
+  %hr.flex-grow-1.mt-1.mb-0.mx-2
 
-
-.tab-content
-  #electric-rates-chart.tab-pane.fade.show.active
+.mb-5
+  .p-3.border.rounded.bg-light.mb-3
     = render "communities/tabs/#{parent_tab}/rates/historical_rate_chart"
-  #electric-rates-data.tab-pane.fade
-    = render "communities/tabs/#{parent_tab}/rates/data"
+
+.mb-3
+  = render "communities/tabs/#{parent_tab}/rates/data"
