--- a/app/views/communities/tabs/demographics/_population.html.haml
+++ b/app/views/communities/tabs/demographics/_population.html.haml
@@ -1,4 +1,6 @@
 - parent_tab = 'demographics'
+
+-# --- Header Section ---
 .d-flex.align-items-center.mb-3
   %i.bi.bi-people-fill.me-2.fs-4
   %h4#population.mb-0.me-3.py-3.anchor-offset Population
@@ -14,7 +16,7 @@
   - gender_selected_period = gender_periods.find { |p| p.end_year == selected_end_year } || gender_periods.first
 
   -# --- Summary Card ---
-  .d-flex.justify-content-between.align-items-center.bg-body-secondary.p-3.rounded.mb-3.flex-wrap
+  .d-flex.justify-content-between.align-items-center.bg-body-secondary.p-3.rounded.mb-4.flex-wrap
     %div
       %i.bi.bi-info-circle-fill.me-2.text-aedg-navy{ data: { controller: 'tooltip', bs_toggle: 'tooltip' }, title: "American Community Survey (ACS) 5-year estimate (#{population_period.start_year}–#{population_period.end_year})" }
       %strong.me-2
@@ -25,36 +27,22 @@
         %span.text-muted
           (±#{number_with_delimiter(most_recent_population.m_pop_total)})
 
-  -# --- NAV TABS ---
-  %ul.nav.nav-tabs{ role: "tablist" }
-    %li.nav-item
-      = link_to "#population-charts", class: "nav-link active", data: { bs_toggle: "tab" }, role: "tab" do
-        %i.bi.bi-bar-chart-fill.me-1
-        Charts
+  - if @community.show_employment?
+    .mb-5
+      .p-4.border.rounded.bg-light
+        %h5.text-muted.mb-3 Employment Status
+        = render "communities/tabs/#{parent_tab}/population/population_employment"
+
+  .row.g-4.mb-5
+    .col-12.col-xl-8
+      .p-4.border.rounded.bg-light.h-100
+        %h5.text-muted.mb-3 Age Distribution
+        = render "communities/tabs/#{parent_tab}/population/population_age_chart", population_periods: population_periods, selected_period: population_period
     
-    %li.nav-item
-      = link_to "#population-data", class: "nav-link", data: { bs_toggle: "tab" }, role: "tab" do
-        %i.bi.bi-table.me-1
-        Table
+    .col-12.col-xl-4
+      .p-4.border.rounded.bg-light.h-100
+        %h5.text-muted.mb-3 Gender Distribution
+        = render "communities/tabs/#{parent_tab}/population/population_gender_pie", population_periods: gender_periods, selected_period: gender_selected_period
 
-  -# --- TAB CONTENT ---
-  .tab-content.mt-4
-    #population-charts.tab-pane.fade.show.active{ role: "tabpanel" }
-      .row.g-5
-        - if @community.show_employment?
-          .col-12
-            %h5.text-muted.mb-3 Employment Status
-            = render "communities/tabs/#{parent_tab}/population/population_employment"
-            %hr.my-4.text-muted
-
-        - if @community.show_population_age_sexes?
-          .col-12.col-lg-8
-            %h5.text-muted.mb-3 Age Distribution
-            = render "communities/tabs/#{parent_tab}/population/population_age_chart", population_periods: population_periods, selected_period: population_period
-          
-          .col-12.col-lg-4
-            %h5.text-muted.mb-3 Gender Distribution
-            = render "communities/tabs/#{parent_tab}/population/population_gender_pie", population_periods: gender_periods, selected_period: gender_selected_period
-
-    #population-data.tab-pane.fade{ role: "tabpanel" }
-      = render "communities/tabs/#{parent_tab}/population/population_age_sex_datatable"
+  .mb-3
+    = render "communities/tabs/#{parent_tab}/population/population_age_sex_datatable"
